--- a/Tmenu/pages/menu/menu.wxss
+++ b/Tmenu/pages/menu/menu.wxss
@@ -1,3 +1,7 @@
+
+page{
+    background: #fff;
+}
 .page-container {
     width: 100%;
     display: flex;
@@ -288,8 +292,12 @@ swiper-item {
 
 .yhq-get {
     position: absolute;
-    right: 36rpx;
-    top: 36rpx;
+    right: 0rpx;
+    top: 0rpx;
+    width: 110rpx;
+    height: 110rpx;
+    text-align: center;
+    line-height: 110rpx;
 }
 
 .dot-img {
@@ -756,3 +764,9 @@ swiper-item {
     display: block;
     height: 178rpx;
 }
+.get-coupon{
+    color: rgba(0, 0, 0, 0.5);
+}
+ .bc-gray{
+    background: #d2d2d2;
+} 
