--- a/Tmenu/pages/myRecord/myRecord.wxss
+++ b/Tmenu/pages/myRecord/myRecord.wxss
@@ -68,22 +68,22 @@
 
 .page-head-detail {
     position: relative;
-    right: 14rpx;
+    width: 100%;
     height: 116rpx;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    left: -20rpx;
+    margin-left: 20rpx;
 }
 
 .arrow {
-    position: relative;
     bottom: -10rpx;
     right: -10rpx;
+    position: relative;
 }
 
 .arrow-title {
-    right: -12rpx;
+    right: 8rpx;
     top: 14rpx;
 }
 
@@ -110,6 +110,7 @@
 .shop-address {
     display: flex;
     color: #fff;
+    width: 80%;
 }
 
 .shop-tel {
@@ -163,14 +164,12 @@
 }
 
 .hb-remain-num {
-    width: 60rpx;
-    height: 32rpx;
+    padding: 2rpx 8rpx;
     background-color: #ff4445;
     color: #fff;
     font-size: 20rpx;
     border-radius: 4rpx;
     text-align: center;
-    line-height: 36rpx;
     margin-right: 12rpx;
 }
 
@@ -249,6 +248,7 @@
     display: flex;
     padding: 20rpx 0;
     position: relative;
+    border-bottom: 2rpx solid #eee;
 }
 
 .shop-logo-img {
@@ -360,14 +360,11 @@
     background-color: #fff;
     margin-top: 14rpx;
 }
-.page-foot{
-    padding: 70rpx 0;
-    display: flex;
-    justify-content: center;
-    background-color: #f9f9f9;
-}
-.boge-logo-img{
-    margin-top: 30rpx;
-    width: 200rpx;
-    height: 120rpx;
+.page-foot {
+    padding-top: 242rpx;
+    padding-bottom: 110rpx;
+    text-align: center;
+    font-size: 20rpx;
+    color: #bfbfbf;
+    background: #f2f2f2;
 }
