--- a/Tmenu/pages/index/index.wxml
+++ b/Tmenu/pages/index/index.wxml
@@ -8,8 +8,8 @@
             <view class="shop-detail">
                 <view class="shop-name">{{shop_info.title}}</view>
                 <view class="shop-add" bindtap="showLoca">
-                    <view class="shop-add-txt gray">{{shop_info.adress}}</view>
-                    <view class="arrow"></view>
+                    <view class="shop-add-txt gray">{{shop_info.adress}} ></view>
+                     <!-- <view class="arrow"></view>  -->
                 </view>
                 <view class="shop-runtime gray">营业时间：周一至周五 {{shop_info.shop_hours.start}}-{{shop_info.shop_hours.end}}</view>
                 <view class="shop-voice-box">
@@ -109,7 +109,7 @@
                                     <view class="recommend-title">
                                         <view class="recommend-title-box">
                                             <image src="http://img.my-shop.cc/image/rec_icon.png" class="rec-img"></image>
-                                            <view class="title-txt">虾仁蛋羮</view>
+                                            <view class="title-txt">{{item.title}}</view>
                                         </view>
                                         <view class="recommend-price">￥{{item.price}}</view>
                                     </view>
@@ -128,24 +128,33 @@
         </view>
         <view class="zhaopin-box">
             <view class="zhaopin-title-box">
-                <view class="title-txt-ch">招牌贤士</view>
+                <view class="title-txt-ch">招聘贤士</view>
                 <view class="title-txt-en">RECRUIT</view>
             </view>
-            <view class="zhaopin-detail-box">
-                <view class="zhaopin-detail-title">
-                    <view class="detail-title">招聘岗位：</view>
-                    <view class="detail-position">前厅部长</view>
-                </view>
-                <view class="position-detail">
-                    <view class="position-detail-title">岗位职务：</view>
-                    <view class="position-detail-des">
-                        <view class="des-item">1.负责前台电话接听、客户接待、快递收发;</view>
-                        <view class="des-item">2.负责维护办公环境;</view>
-                        <view class="des-item">3.负责公司邮件收发、会议纪要、快递收发;</view>
-                        <view class="des-item">4.负责每月行政费用的审核及申请;</view>
-                    </view>
-                </view>
-            </view>
+
+            <swiper indicator-dots="{{true}}" autoplay="{{true}}" interval="{{3000}}" duration="{{600}}" wx:key="id">
+                <block wx:for="{{recruit}}">
+                    <swiper-item>
+                        <view class="zhaopin-detail-box">
+                            <view class="zhaopin-detail-title">
+                                <view class="detail-title">招聘岗位：</view>
+                                <view class="detail-position">{{item.stations}}</view>
+                            </view>
+                            <view class="position-detail">
+                                <view class="position-detail-title">岗位职务：</view>
+                                <view class="position-detail-des">
+                                    <view class="des-item">{{item.sequest}}</view>
+                                    <!-- <view class="des-item">1.负责前台电话接听、客户接待、快递收发;</view>
+                                    <view class="des-item">2.负责维护办公环境;</view>
+                                    <view class="des-item">3.负责公司邮件收发、会议纪要、快递收发;</view>
+                                    <view class="des-item">4.负责每月行政费用的审核及申请;</view> -->
+                                </view>
+                            </view>
+                        </view>
+                    </swiper-item>
+                </block>
+            </swiper>
+
         </view>
         <view class="foot">
             © 伯格网络提供支持
