--- a/Tmenu/pages/confirmOrder/confirmOrder.wxml
+++ b/Tmenu/pages/confirmOrder/confirmOrder.wxml
@@ -45,7 +45,7 @@
                     </view>
                 </view>
                 <view class="product-list" wx:for="{{use_base}}" wx:if="{{show_use_base}}" wx:key="id">
-                    <image src="http://img.my-shop.cc/image/wan.jpg" class="product-img"></image>
+                    <image src="{{item.img_url}}" class="product-img"></image>
                     <view class="product-detail">
                         <view class="product-head">
                             <view class="product-name txt-head">{{item.name}}</view>
