--- a/Tmenu/app.wxss
+++ b/Tmenu/app.wxss
@@ -50,3 +50,44 @@ view{
     color: #d3d3d3;
     font-size: 24rpx;
 }
+
+.page-head-title {
+    flex-grow: 1;
+    position: relative;
+    left: 2rpx;
+    height: 50rpx;
+    line-height: 50rpx;
+}
+
+.page-head-box {
+    width: 92%;
+    height: 190rpx;
+    display: flex;
+    align-items: center;
+}
+
+.notice-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 20rpx;
+    height: 30rpx;
+}
+
+.page-head-notice {
+    line-height: 1.3;
+    width: 90%;
+}
+
+.tel-txt{
+    padding-top: 4rpx;
+}
+
+.page-head-detail {
+    position: relative;
+    width: 100%;
+    height: 124rpx;
+    display: flex;
+    flex-direction: column;
+    margin-left: 20rpx;
+}
