--- a/Tmenu/pages/myRecord/myRecord.wxss
+++ b/Tmenu/pages/myRecord/myRecord.wxss
@@ -35,7 +35,6 @@
 
 .page-head-title-box {
     display: flex;
-    flex-grow: 1;
     position: relative;
     left: 2rpx;
 }
@@ -46,34 +45,6 @@
 
 .txt-small {
     font-size: 20rpx;
-}
-
-.page-head-title {
-    flex-grow: 1;
-    position: relative;
-    left: 2rpx;
-}
-
-.page-head-box {
-    width: 92%;
-    height: 190rpx;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.page-head-notice {
-    line-height: 30rpx;
-}
-
-.page-head-detail {
-    position: relative;
-    width: 100%;
-    height: 116rpx;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 20rpx;
 }
 
 .arrow {
@@ -119,11 +90,12 @@
     position: relative;
     width: 80rpx;
 }
-.shop-tel::after{
+
+.shop-tel::after {
     content: "";
     display: block;
     width: 2rpx;
-    background-color: rgba(255, 255, 255, .5);
+    background-color: rgba(255, 255, 255, 0.5);
     height: 32rpx;
     position: absolute;
     left: 0;
@@ -182,12 +154,15 @@
     transform: rotate(45deg);
     position: relative;
 }
-.yearr{
+
+.yearr {
     top: 8rpx;
 }
-.yhqarr{
+
+.yhqarr {
     top: 10rpx;
 }
+
 .hb-remain-count {
     display: flex;
 }
@@ -201,9 +176,11 @@
     margin-top: 20rpx;
     background-color: #fff;
 }
-.yhq-txt{
+
+.yhq-txt {
     color: #2d2d2d;
 }
+
 .yhq-count {
     display: flex;
 }
@@ -312,7 +289,8 @@
     font-weight: bold;
     color: #2d2d2d;
 }
-.total-price-box{
+
+.total-price-box {
     width: 100%;
     display: flex;
     margin-top: 4rpx;
@@ -321,21 +299,24 @@
     height: 90rpx;
     line-height: 90rpx;
 }
-.total-price-txt{
+
+.total-price-txt {
     font-size: 28rpx;
     font-weight: bold;
     color: #2d2d2d;
     position: absolute;
     right: 140rpx;
 }
-.total-price-count{
+
+.total-price-count {
     font-size: 28rpx;
     font-weight: bold;
     color: #ff4445;
     position: absolute;
     right: 24rpx;
 }
-.another-order{
+
+.another-order {
     width: 100%;
     height: 90rpx;
     border-top: 4rpx solid #f9f9f9;
@@ -345,7 +326,8 @@
     display: flex;
     align-items: center;
 }
-.another-boder-btn{
+
+.another-boder-btn {
     position: absolute;
     right: 24rpx;
     font-size: 24rpx;
@@ -360,6 +342,7 @@
     background-color: #fff;
     margin-top: 14rpx;
 }
+
 .page-foot {
     padding-top: 242rpx;
     padding-bottom: 110rpx;
